# paper-to-alpha-reproduction-suite

./: README.md  pyproject.toml
docs/: operating-boundaries.md  recruiter-brief.md  research-note.md  system-design.md  validation-evidence.md
src/paper_to_alpha_reproduction_suite/: __init__.py  reproduction.py
tests/: test_reproduction.py
