[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-to-alpha-reproduction-suite"
version = "0.1.0"
description = "Evidence scoring for paper-backed alpha reproduction workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ephraim Shaw" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
